Add comprehensive documentation and commands for Finance Tracker project
- Introduced DevOps, Frontend, Orchestrator, PostgreSQL DBA, QA, Reviewer, Rust Backend, and Technical Writer agents with detailed responsibilities and standards.
- Created commands for building, testing, code reviewing, debugging, generating documentation, setting up components, and writing tests.
- Established project structure and guidelines for Rust and TypeScript development, including security practices and database management.
- Added a project overview and architecture description in CLAUDE.md for better understanding of the Finance Tracker application.
- Included a package.json for managing dependencies in the frontend.
- Set up .gitignore and project configuration for Serena.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 
 # Rust
 backend/target/
+target/
 
 # Node
 frontend/node_modules/
@@ -16,3 +17,6 @@ frontend/.next/
 # IDE
 .vscode/
 .idea/
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
