--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ frontend/.next/
 
 # Snyk Security Extension - AI Rules (auto-generated)
 .github/instructions/snyk_rules.instructions.md
+
+# bv (beads viewer) local config and caches
+.bv/
